CSCFAIRMETA-789: [REF] delete flush datasets endpoint, swagger updates, requrements update
